adjust placeholder alignment and fix flick on transition

--- a/webcomponents/checkbox/checkbox.style.scss
+++ b/webcomponents/checkbox/checkbox.style.scss
@@ -92,6 +92,7 @@
 .mn-checkbox[placeholder] {
   line-height: 2em;
   --placeholder-color: inherit;
+  transform: translateZ(0);
 
   &:before {
     color: var(--placeholder-color);
@@ -99,6 +100,8 @@
     padding: 0 1em;
     transition: color .2s ease;
     -webkit-font-smoothing: antialiased;
+    display: block;
+    text-align: center;
   }
 
   .input svg {display: none}
